# diploma-thesis-code

./: .gitignore  CMakeLists.txt  project_structure.txt
backend/: CMakeLists.txt
backend/core/: CMakeLists.txt
backend/core/include/core/: core.h  module_loader.h
backend/core/include/core/logging/: logger.h
backend/core/include/core/memory_allocation/: dynamic_allocator.h  memory_allocator.h  shared_data_core.h
backend/core/lib/: CMakeLists.txt
backend/core/lib/core/: CMakeLists.txt
backend/core/lib/core/include/core/: core.h  core_structures.h  defaults.h
backend/core/lib/core/src/: core.cpp  core_structures.cpp
backend/core/lib/core/tests/: CMakeLists.txt
backend/core/lib/core/tests/modules/: CMakeLists.txt
backend/core/lib/core/tests/modules/common_include/module_common/: module_common.h
backend/core/lib/core/tests/modules/module_a/: CMakeLists.txt
backend/core/lib/core/tests/modules/module_a/include/module_a/: module_a.h
backend/core/lib/core/tests/modules/module_a/src/: module_a_contract.cpp
backend/core/lib/core/tests/modules/module_b/: CMakeLists.txt
backend/core/lib/core/tests/modules/module_b/include/module_b/: module_b.h
backend/core/lib/core/tests/modules/module_b/src/: module_b_contract.cpp
backend/core/lib/core/tests/modules/module_c/: CMakeLists.txt
backend/core/lib/core/tests/modules/module_c/include/module_c/: module_c.h
backend/core/lib/core/tests/modules/module_c/src/: module_c_contract.cpp
backend/core/lib/core/tests/modules/module_d/: CMakeLists.txt
backend/core/lib/core/tests/modules/module_d/include/module_d/: module_d.h
backend/core/lib/core/tests/modules/module_d/src/: module_d_contract.cpp
backend/core/lib/core/tests/modules/module_e/: CMakeLists.txt
backend/core/lib/core/tests/modules/module_e/include/module_e/: module_e.h
backend/core/lib/core/tests/modules/module_e/src/: module_e_contract.cpp
backend/core/lib/core/tests/src/: core_test_1.cpp
backend/core/lib/core_module_interface/: CMakeLists.txt
backend/core/lib/core_module_interface/include/utils/module_interface/: module_api.h  module_loader.h
backend/core/lib/core_module_interface/src/: module_loader.cpp
backend/core/lib/logging/: CMakeLists.txt
backend/core/lib/logging/include/utils/logging/: logger.h
backend/core/lib/logging/src/: console_logger.cpp
backend/core/lib/memory_allocation/: CMakeLists.txt
backend/core/lib/memory_allocation/include/utils/memory_allocation/: allocator_interface_core.h  allocator_wrapper.h  dynamic_allocator.h  shared_data_core.h  static_allocator.h
backend/core/lib/memory_allocation/src/: allocator_wrapper.cpp  dynamic_allocator.cpp  memory_allocator.cpp  shared_data_core.cpp  static_allocator.cpp
backend/core/lib/memory_allocation/tests/: CMakeLists.txt  shared_data_core_test.cpp
backend/core/lib/memory_allocation/tests/include/: test_logger.h  test_memory_allocator.h
backend/core/lib/memory_allocation/tests/src/: dynamic_allocator_test.cpp  shared_data_core_test.cpp  static_allocator_test.cpp
backend/core/src/: main.cpp  module_loader.cpp
backend/core/src/memory_allocation/: dynamic_allocator.cpp  memory_allocator.cpp  shared_data_core.cpp
backend/core/tests/: CMakeLists.txt
backend/core/tests/memory_allocation/: shared_data_core_test.cpp
backend/module_common/: CMakeLists.txt
backend/module_common/include/module_common/: base_module.h  dll_interface_threads.h  dll_module_metrics.h  dll_module_wrapper.h  module_contract.h  module_interface.h  module_interface_.h  module_interface_threads.h  module_wrapper.h  periodic_thread.h
backend/module_common/src/: base_module.cpp  dll_module_wrapper.cpp  module_interface.cpp  module_wrapper.cpp
backend/module_common/tests/: CMakeLists.txt
backend/module_common/tests/src/: shared_data_blob_tests.cpp
backend/module_helpers/activation_wrapper/: CMakeLists.txt
backend/module_helpers/activation_wrapper/include/module_helpers/activation_wrapper/: activable_module.h  activation_wrapper.h  async_task.h  message_types.h  parameter_description.h
backend/module_helpers/activation_wrapper/src/: activation_wrapper.cpp  async_task.cpp  parameter_description.cpp
backend/module_helpers/helper_base/: CMakeLists.txt
backend/module_helpers/helper_base/include/module_helpers/helper_base/: helper_base.h  helper_wrapper.h
backend/module_helpers/helper_base/src/: helper_wrapper.cpp
demos/: CMakeLists.txt
demos/camera_calib/: CMakeLists.txt
demos/camera_calib/include/: camera_calibration.h  camera_calibration_exception.h
demos/camera_calib/src/: camera_calibration.cpp  main.cpp
demos/modules/core/: CMakeLists.txt
demos/modules/core/include/: module_api.h  module_loader.h
demos/modules/core/include/core/: core.h  logger.h  module_api.h  module_loader.h
demos/modules/core/include/core/logging/: console_logger.h
demos/modules/core/src/: console_logger.cpp  main.cpp  module_loader.cpp
demos/modules/core/src/logging/: console_logger.cpp
demos/modules/core/src/memory_allocation/: shared_data_core.cpp
demos/modules/module_a/: CMakeLists.txt
demos/modules/module_a/src/: main.cpp
demos/modules/module_b/: CMakeLists.txt
demos/modules/module_b/src/: main.cpp
demos/pen_calib/: CMakeLists.txt
demos/pen_calib/include/: pen_calibration.h  pen_calibration_helper.h
demos/pen_calib/python/: visualize_3d.py
demos/pen_calib/src/: main.cpp  pen_calibration.cpp  pen_calibration_helper.cpp
demos/pen_tracking/: CMakeLists.txt
demos/pen_tracking/data/test_results/: test__2025_03_19__23_44.csv  test_laptop__2025_03_20__17_37.csv  test_laptop_remove_angle_limit__2025_03_20__19_07.csv  test_remove_angle_limit__2025_03_20__19_19.csv
demos/pen_tracking/include/: ble_reader.h  kalman_filter.h  marker_tracker.h
demos/pen_tracking/python/: test_analyzer.py
demos/pen_tracking/src/: accuracy_test.cpp  ble_reader.cpp  kalman_filter.cpp  main.cpp  main_ble_test.cpp  marker_tracker.cpp  pen_drawing_test.cpp  pen_visualization_test.cpp  performance_test.cpp
include/: defaults.h  logging.h
sources/: activation_process.plantuml  (+2 more)
(+34 files in other folders)
